# gus-regon

./: CHANGELOG.md  LICENSE  README.md  default.nix  flake.nix  gus-regon.cabal  shell.nix
nix/: nixpkgs.nix
src/Web/BIR/BIR11/: Methods.hs  Parse.hs  Soap.hs  TH.hs  Types.hs  Xml.hs
src/Web/BIR/BIR11/Methods/: Lifted.hs
src/Web/BIR/BIR11/Types/: Common.hs  Error.hs  Report.hs  Search.hs
src/Web/BIR/BIR11/Types/Report/: Bir11JednLokalnaOsFizycznej.hs  Bir11JednLokalnaOsFizycznejPkd.hs  Bir11JednLokalnaOsPrawnej.hs  Bir11JednLokalnaOsPrawnejPkd.hs  Bir11OsFizycznaDaneOgolne.hs  Bir11OsFizycznaDzialalnoscCeidg.hs  Bir11OsFizycznaDzialalnoscPozostala.hs  Bir11OsFizycznaDzialalnoscRolnicza.hs  Bir11OsFizycznaDzialalnoscSkreslonaDo20141108.hs  Bir11OsFizycznaListaJednLokalnych.hs  Bir11OsFizycznaPkd.hs  Bir11OsPrawna.hs  Bir11OsPrawnaListaJednLokalnych.hs  Bir11OsPrawnaPkd.hs  Bir11OsPrawnaSpCywilnaWspolnicy.hs  Bir11TypPodmiotu.hs
tests/: test.hs
